<resources>
    <string name="app_name">Kingdom_King</string>
    <string name="nombre_perfil_usuario">Welcome, Jarl Erik</string>
    <string name="Numero_De_Monedas">350</string>
    <string name="icono_moneda">icono_moneda</string>
    <string name="plus">plus</string>
    <string name="icono_lupa">icono_lupa</string>
    <string name="buscador">buscador</string>
    <string name="descripcion_oferta_hombre">banner_hombre_con_hacha</string>
    <string name="search">Search</string>
    <string name="icono_de_armas">Icono de armas</string>
    <string name="weapons">Weapons</string>
    <string name="icono_de_armaduras">Icono de armaduras</string>
    <string name="casco_home">Armor</string>
    <string name="ropa_home">Clothing</string>
    <string name="artifacts">Artifacts</string>
    <string name="foto_recommended">foto_recommended</string>
    <string name="nombre_espada">Viking Sword</string>
    <string name="flecha_atras">flecha_atras</string>
    <string name="carrito_pag4">Carrito</string>
    <string name="detalles_especificacion_espada_pag4">A finely crafted Norse longsword with a sharp steel blade, an intricately engraved hilt, and a leather-wrapped grip. Perfect for any moderrday viking warrior.</string>
    <string name="fondo_animado_splash_screen">Fondo animado</string>
    <string name="checkout">Checkout</string>
    <string name="correo_usuario_pag7">erik@example.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="lista_de_deseos">My Wishlist</string>
    <string name="payment_methods_pag7">Payment Methods</string>
    <string name="notificaciones">Notifications</string>
    <string name="cerrar_sesion">Log Out</string>
    <string name="view_order">View Order</string>
    <string name="contraseña">Contraseña</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="pay_with_apple_pay">Pay with Apple Pay</string>
    <string name="pay_with_google_pay">Pay with Google Pay</string>
    <string name="viking_sword_1">Viking Sword ×1</string>
    <string name="erik_thorvaldsson">Erik Thorvaldsson</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="order_summary">Order Summary</string>
    <string name="_1_200_g">1,200 G</string>
    <string name="live_transmissions">Live Transmissions</string>
    <string name="viking_combat_tournament">Viking Combat Tournament</string>
    <string name="jarl_erik">Jarl Erik</string>
    <string name="great_fight_the_axe_mote_win">Great fight! The axe mote win!</string>
    <string name="gudrun">Gudrun</string>
    <string name="for_honor_and_glory">For honor and glory!</string>
    <string name="gjonn">Gjonn</string>
    <string name="batal">Batal!</string>
    <string name="skal_ot_the_strong_preval">Skal!! ot the strong preval!</string>
    <string name="text_comments">Text: Comments</string>
    <string name="viking_raids">Viking Raids</string>
    <string name="raid_on_england">Raid on England</string>
    <string name="raid_on_francia">Raid on Francia</string>
    <string name="join">JOIN</string>
    <string name="texto_pag14">Join the raid on English shores at dawn. Plunder villages, bring back riches, and earn glory.</string>
    <string name="join_raid">Join Raid</string>
    <string name="ok">OK</string>
    <string name="joined_successfully">Joined Successfully</string>
    <string name="texto_pag15">You have successfully joined the raid. Prepare for battle!</string>
    <string name="save_this_card_for_future_purchases">Save this card for future purchases</string>
    <string name="change_avatar">Change avatar</string>
    <string name="my_orders">My Orders</string>
</resources>