<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pag4"
    tools:context=".PagD_Espada_Activity">

    <!-- Guideline arriba/TOP -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_arriba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <!-- Guideline que envuelve los detalles de la espada -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/header_espada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <!-- Guideline vertical izquierdo, para dejar margenes -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_izquierdo"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05" />

    <!-- Guideline vertical derecha, para dejar margenes -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_vertical_derecha"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contenedor_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top_arriba"
        app:layout_constraintBottom_toTopOf="@id/header_espada"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_izquierdo"
        app:layout_constraintEnd_toStartOf="@id/guide_vertical_derecha">


        <!-- Flecha atras
        android:foreground="?attr/selectableItemBackgroundBorderless"
        se utiliza para añadir un efecto visual de retroalimentación táctil
         (ripple o "onda")

         android:clickable="true". Indica que el elemento puede recibir eventos de clic.
         Una imagen para que funcione como un boton, esta opción para que el sistema
         detecte cuando el usuario lo toca y pueda ejecutar una acción
          (como abrir otra pantalla).

          android:focusable="true". Indica que el elemento puede ganar el foco del sistema.
          Permite que el elemento sea seleccionado usando métodos de entrada que no son la pantalla táctil, como un teclado físico o
          por voz para los ciegos

         -->
        <ImageView
            android:id="@+id/flecha_atras"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/flecha_atras"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.6"
            app:srcCompat="@drawable/fleecha"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Nombre espada -->
        <TextView
            android:id="@+id/titulo_espada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre_espada"
            android:textColor="@color/color_letras_pag4"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/flecha_atras"
            app:layout_constraintEnd_toStartOf="@id/cantidad_monedas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Icono moneda -->
        <ImageView
            android:id="@+id/img_moneda"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/icono_moneda"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@id/cantidad_monedas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintDimensionRatio="1:1"
            app:srcCompat="@drawable/moneda" />


        <!-- Cantidad monedas -->
        <TextView
            android:id="@+id/cantidad_monedas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/color_letras_pag4"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/img_carrito_compras"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="HardcodedText" />

        <!-- Carrito -->
        <ImageView
            android:id="@+id/img_carrito_compras"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/carrito_pag4"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintDimensionRatio="1:1"
            app:srcCompat="@drawable/carro_pag4" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_final_espada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/img_espada"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/header_espada"
        app:layout_constraintBottom_toTopOf="@id/guideline_final_espada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/espada"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5731874" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_espada"
        android:textColor="@color/color_letras_pag4"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_izquierdo"
        app:layout_constraintTop_toTopOf="@+id/guideline_final_espada" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/moneda"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/icono_moneda"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/guide_vertical_derecha"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contenedor_detalles_espada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8878249" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/contenedor_detalles_espada"
        app:layout_constraintEnd_toStartOf="@+id/guide_vertical_derecha"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_izquierdo"
        app:layout_constraintTop_toTopOf="@+id/guideline7"/>


</androidx.constraintlayout.widget.ConstraintLayout>
