<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PagN_Raid_England_Activity"
    android:background="@drawable/pag14_fondo_ampliado">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia_superior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia_header_limite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia_inferior_barra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia_izquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia_derecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cabecera_raid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guia_header_limite"
        app:layout_constraintEnd_toStartOf="@+id/guia_derecha"
        app:layout_constraintStart_toStartOf="@+id/guia_izquierda"
        app:layout_constraintTop_toTopOf="@+id/guia_superior">

        <ImageView
            android:id="@+id/btn_volver_atras"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:contentDescription="@string/flecha_atras"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fleecha"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_titulo_raid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viking_raids"
            android:textColor="#E0C9A6"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txt_titulo_raid"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.166"
            app:srcCompat="@drawable/pag14_text"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>








    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/barra_inferior"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guia_inferior_barra">


        <ImageView
            android:id="@+id/icon_principal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/icon_obj"
            app:layout_constraintStart_toEndOf="@+id/icon_maletin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.15"
            app:srcCompat="@drawable/pag8_btn_inferior_grande"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/icon_maletin"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.12"
            app:srcCompat="@drawable/pag10_home"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageView
            android:id="@+id/icon_maletin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/icon_principal"
            app:layout_constraintStart_toEndOf="@+id/icon_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.12"
            app:srcCompat="@drawable/pag10_maletin"
            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/icon_obj"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/icon_noti"
            app:layout_constraintStart_toEndOf="@+id/icon_principal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.12"
            app:srcCompat="@drawable/pag10_obj"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/icon_noti"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_obj"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.12"
            app:srcCompat="@drawable/pag8_perfil_foto_abajo"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/barra_inferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabecera_raid">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <!--

        ===== la imagen solo, si queremos solo la imagen y no el video
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pag14_foto_raid_ampliado"
            tools:ignore="ContentDescription" />-->

        <VideoView
            android:id="@+id/videoView_raid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.43" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline29"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_imagen">


            <TextView
                android:id="@+id/txt_descripcion_raid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="9dp"
                android:alpha="0.9"
                android:text="@string/texto_pag14"
                android:textColor="#E0C9A6"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.98" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.21" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.76" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contenedor_btn_join"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline32"
            app:layout_constraintEnd_toStartOf="@+id/guideline34"
            app:layout_constraintStart_toStartOf="@+id/guideline33"
            app:layout_constraintTop_toTopOf="@+id/guideline30"
            android:background="@drawable/pag14_marco_join">


            <TextView
                android:id="@+id/JoinRaidd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/join_raid"
                android:textColor="#E0C9A6"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>